# checkbox_api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
checkbox_api/: config.py  main.py
checkbox_api/apps/: common.py  public.py  secured.py
checkbox_api/auth/: access_token.py  password.py
checkbox_api/dependencies/: database.py  logger.py
checkbox_api/features/product/: dependencies.py  validation.py
checkbox_api/features/product/database/: controllers.py  models.py
checkbox_api/features/proof/: dependencies.py  handlers.py
checkbox_api/features/proof/api/: validation.py
checkbox_api/features/proof/database/: controllers.py  models.py
checkbox_api/features/receipt/: dependencies.py  handlers.py
checkbox_api/features/receipt/api/: router.py  validation.py
checkbox_api/features/receipt/database/: controllers.py  models.py
checkbox_api/features/user/: dependencies.py
checkbox_api/features/user/api/: router.py  validation.py
checkbox_api/features/user/database/: controller.py  models.py
checkbox_api/generics/: controller.py  pagination.py  type_vars.py
checkbox_api/mixins/: password.py
